stops user editing user for a workout on edit, unless user is blank

--- a/app/views/workouts/_form.html.haml
+++ b/app/views/workouts/_form.html.haml
@@ -15,10 +15,12 @@
     = f.label :due_date
     %br/
     = f.date_select :due_date
-  .field
-    = f.label :user_id
-    %br/
-    = f.select(:user_id, User.all.map {|u| [u.full_name, u.id]},  {include_blank: "Template"})
+
+  - unless (@editing && @workout.user)
+    .field
+      = f.label :user_id
+      %br/
+      = f.select(:user_id, User.all.map {|u| [u.full_name, u.id]},  {include_blank: "Template"})
 
   = render 'fields', f: f
 
