--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'New Exercise', new_exercise_path, class: "btn btn-info" %>
+
 <h1>Listing exercises</h1>
 
 <table>
@@ -22,4 +24,4 @@
 
 <br />
 
-<%= link_to 'New Exercise', new_exercise_path %>
+
