--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,3 +1,5 @@
+= link_to 'New Workout', new_workout_path, class: "btn btn-info"
+
 %h1 Listing workouts
 %table
   %tr
@@ -12,9 +14,9 @@
       %td= workout.description
       %td= workout.due_date
       %td= workout.user.full_name
-      %td= link_to 'Show', workout
-      %td= link_to 'Edit', edit_workout_path(workout)
-      %td= link_to 'Destroy', workout, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= link_to 'Show', workout, class: "btn btn-primary btn-xs"
+      %td= link_to 'Edit', edit_workout_path(workout),class: "btn btn-default btn-xs"
+      %td= link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs"
 
 %h1 templates
 %table
@@ -26,8 +28,7 @@
   - @templates.each do |workout|
     %tr
       %td= workout.description
-      %td= link_to 'Show', workout
-      %td= link_to 'Edit', edit_workout_path(workout)
-      %td= link_to 'Destroy', workout, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= link_to 'Show', workout,  class: "btn btn-primary btn-xs"
+      %td= link_to 'Edit', edit_workout_path(workout), class: "btn btn-default btn-xs"
+      %td= link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs"
 %br
-= link_to 'New Workout', new_workout_path
