--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,23 +6,44 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    .login
-    - if current_user
-      = current_user.email
-      = link_to "Log Out", destroy_user_session_path, method: :delete
-    - else
-      = link_to "Sign In", new_user_session_path
-      = link_to "Sign Up", new_user_registration_path
+    %nav.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
+      .navbar-header
+
+        %button.navbar-toggle{"data-target" => ".navbar-ex1-collapse", "data-toggle" => "collapse", :type => "button"}
+          %span.sr-only Toggle navigation
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{:href => "#"} Zinc Fitness
+      - if current_user
+        .collapse.navbar-collapse.navbar-ex1-collapse
+          %ul.nav.navbar-nav
+            %li.active
+            %li
+              = link_to 'Exercises', exercises_path
+            %li
+              = link_to 'Workouts', workouts_path
+            %li
+              =link_to "Edit Profile", edit_user_registration_path
+          %ul.nav.navbar-nav.navbar-right
+            %li
+              = mail_to current_user.email
+            %li
+              = link_to('Logout', destroy_user_session_path, :method => :delete)
+      - else
+        .collapse.navbar-collapse.navbar-ex1-collapse
+          %ul.nav.navbar-nav.navbar-right
+            %li
+              = link_to "Sign In", new_user_session_path
+            %li
+              = link_to "Sign Up", new_user_registration_path
+
+    .container
+      %p.notice= notice
+      %p.alert= alert
+      = yield
 
 
-    %ul
-      %li
-        = link_to "Exercises", exercises_path
-      %li
-        = link_to "Workouts", workouts_path
-      %li
-        =link_to "Edit Profile", edit_user_registration_path
 
-    %p.notice= notice
-    %p.alert= alert
-    = yield
+
+
