--- a/app/views/workouts/_fields.html.haml
+++ b/app/views/workouts/_fields.html.haml
@@ -1,15 +1,46 @@
 = f.fields_for :exercise_sets do |exercise_set_form|
-  = exercise_set_form.collection_select :exercise_id, Exercise.all, :id, :name
-  %br
-  = exercise_set_form.label :reps, "Number of Reps"
-  = exercise_set_form.number_field :reps
-  = exercise_set_form.label :rest_period, "Rest Period (s)"
-  = exercise_set_form.number_field :rest_period
-  %br
-  = exercise_set_form.label :suggested_weight, "Target Weight (total kg)"
-  =exercise_set_form.text_field :suggested_weight
-  = exercise_set_form.label :achieved_weight, "Achieved Weight (total kg)"
-  =exercise_set_form.text_field :suggested_weight
-  = exercise_set_form.link_to_remove 'Remove'
+  .field
+    = exercise_set_form.label :exercise
+    %br
+    = exercise_set_form.collection_select :exercise_id, Exercise.all, :id, :name, {include_blank: "-- Select --"}
+  .field
+    = exercise_set_form.label :set_type
+    %br
+    = exercise_set_form.select(:set_type, ["Resistance", "Time Interval", "Distance"],  {include_blank: "-- Select --"})
+  .field
+    = exercise_set_form.label :weight_required, "Weight Required?"
+    %br
+    = exercise_set_form.check_box :weight_required
+  .field
+    = exercise_set_form.label :reps, "Number of Reps"
+    %br
+    = exercise_set_form.number_field :reps
+  .field
+    = exercise_set_form.label :distance, "Distance (m)"
+    %br
+    =exercise_set_form.number_field :distance
+  .field
+    =exercise_set_form.label :time, "Interval (s)"
+    %br
+    =exercise_set_form.number_field :time
+
+  .field
+    = exercise_set_form.label :suggested_weight, "Target Weight (total kg)"
+    %br
+    =exercise_set_form.text_field :suggested_weight
+  .field
+    = exercise_set_form.label :achieved_weight, "Achieved Weight (total kg)"
+    %br
+    =exercise_set_form.text_field :achieved_weight
+  .field
+    = exercise_set_form.label :rest_period, "Rest Period (s)"
+    %br
+    = exercise_set_form.number_field :rest_period
+  .field
+    =exercise_set_form.label :notes
+    %br
+    =exercise_set_form.text_field :notes
+  .field
+    = exercise_set_form.link_to_remove 'Remove'
   %br
 = f.link_to_add 'Add a Set', :exercise_sets
