--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -15,27 +15,28 @@
   Sets
 - @workout.exercise_sets.each do |set|
   -if set.exercise
-    %p.exercise_set_header
-      = "#{set.exercise.name} (#{set.set_type})"
+    %h4.exercise_set_header
+      = set.to_string
     %ul.exercise_set
-      -unless set.reps.blank?
+      -unless (set.distance.blank? || set.set_type == "Distance")
+        %li
+          = "Distance: #{set.distance}m"
+      -unless (set.time.blank? || set.set_type == "Time Interval")
+        %li
+          = "Interval: #{set.time}s"
+      -unless (set.set_type == "Resistance" || set.reps.blank?)
         %li
           = "Reps: #{set.reps}"
       -unless set.achieved_weight.blank?
         %li
           = "Achieved Weight: #{set.achieved_weight}kg"
-      -unless set.suggested_weight.blank?
+      -unless (set.suggested_weight.blank? || set.achieved_weight)
         %li
           = "Target Weight: #{set.suggested_weight}kg"
-      -unless set.distance.blank?
-        %li
-          = "Distance: #{set.distance}m"
-      -unless set.time.blank?
-        %li
-          = "Interval: #{set.time}s"
+
       -unless set.rest_period.blank?
         %li
-          = "Rest Period: #{set.rest_period}s"
+          = "Rest: #{set.rest_period}s"
       -unless set.notes.blank?
         %li
           Notes: &ldquo;
