--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -2,9 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// .container {
-//   width: 940px;
-// }
+.button_center {
+  text-align: center;
+}
+
+.full_width {
+  width: 50%;
+  margin-top: 0.5em;
+}
+
+.half_width {
+  width: 25%;
+  margin-top: 0.5em
+
+}
 
 .field {
   display: inline-block;
