--- a/app/views/workouts/_complete_form.html.haml
+++ b/app/views/workouts/_complete_form.html.haml
@@ -11,4 +11,4 @@
   = render 'complete_fields', f: f
 
   .actions
-    = f.submit "Save it!", class: "btn btn-danger"
+    = f.submit "Save it!", class: "btn btn-danger btn-lg full_width save_button"
