--- a/app/views/workouts/complete.html.haml
+++ b/app/views/workouts/complete.html.haml
@@ -1,15 +1,19 @@
-%h2
-  = "In Progress: #{@workout.description}"
-%h3
-  - if @workout.user
-    = "Good luck #{@workout.user.first_name}!"
-  - else
-    Template
+.row
+  .col-md-7
+    %h2
+      = "In Progress: #{@workout.description}"
+    %h3
+      - if @workout.user
+        = "Good luck #{@workout.user.first_name}!"
+      - else
+        Template
 
-%p
-  Due date:
-  = @workout.due_date.to_formatted_s(:long_ordinal)
+    %p
+      Due date:
+      = @workout.due_date.to_formatted_s(:long_ordinal)
 
-%h3
-  Sets
-=render 'complete_form'
+    %h3
+      Sets
+    =render 'complete_form'
+  .col-md-5.button_center
+    =button_to "Back", workout_path(@workout), method: :get, class: "btn btn-primary btn-lg full_width"
