--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -64,6 +64,11 @@ ul.exercise_set li {
 
 .form_label {
   font-weight: normal;
+  background: #eeeeee;
+  border-radius: 3px;
+  padding: 0.1em;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
 }
 
 .complete_form {
