--- a/app/views/workouts/complete.html.haml
+++ b/app/views/workouts/complete.html.haml
@@ -1,19 +1,32 @@
 .row
-  .col-md-7
-    %h2
-      = "In Progress: #{@workout.description}"
-    %h3
-      - if @workout.user
-        = "Good luck #{@workout.user.first_name}!"
-      - else
-        Template
+  = nested_form_for(@workout) do |f|
+    .col-md-7
+      %h2
+        = "In Progress: #{@workout.description}"
+      %h3
+        - if @workout.user
+          = "Good luck #{@workout.user.first_name}!"
+        - else
+          Template
 
-    %p
-      Due date:
-      = @workout.due_date.to_formatted_s(:long_ordinal)
+      %p
+        Due date:
+        = @workout.due_date.to_formatted_s(:long_ordinal)
 
-    %h3
-      Sets
-    =render 'complete_form'
-  .col-md-5.button_center
-    =button_to "Back", workout_path(@workout), method: :get, class: "btn btn-primary btn-lg full_width"
+      %h3
+        Sets
+
+        - if @workout.errors.any?
+          #error_explanation
+            %h2
+              = pluralize(@workout.errors.count, "error")
+              prohibited this workout from being saved:
+            %ul
+              - @workout.errors.full_messages.each do |msg|
+                %li= msg
+
+      = render 'complete_fields', f: f
+    .col-md-5.button_center
+      .actions
+        = f.submit "Save it!", class: "btn btn-danger btn-lg full_width"
+        =button_to "Back", workout_path(@workout), method: :get, class: "btn btn-primary btn-lg full_width"
