--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -60,18 +60,20 @@ ul.exercise_set li {
 }
 
 .notes_entry {
-  width: 50%;
+  display: inline-block;
+  width: 69%
+
 
 }
 
 .form_label {
   font-weight: normal;
-  // background: #eeeeee;
+  background: #eeeeee;
   border-radius: 3px;
   padding: 0.1em;
   padding-left: 0.2em;
   padding-right: 0.2em;
-  width: 6em;
+  width: 30%;
   text-align: right;
 }
 
@@ -79,7 +81,8 @@ ul.exercise_set li {
   display: block;
   margin-right: 0.3em;
   margin-top: 0.3em;
-  padding-left: 0.5em;
+  padding-left: 1em;
+  padding-right: 1em;
   width: 100%;
 
 }
