--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,8 @@
               = link_to 'Workouts', workouts_path
             %li
               =link_to "Edit Profile", edit_user_registration_path
+            %li
+              = link_to "Users", users_path
           %ul.nav.navbar-nav.navbar-right
             %li
               = mail_to current_user.email
