--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,6 +1,12 @@
 %h2.workout_heading
   Workouts:
   = link_to 'New Workout', new_workout_path, class: "btn btn-info new_workout"
+
+=search_form_for @q, :url => url_for(:workouts_controller => "q", :action => "index") do |f|
+
+  =f.text_field :description_or_exercises_name_or_user_first_name_or_user_last_name_cont
+  =f.submit
+
 .row
   .col-md-6
     %h3 Templates
@@ -14,6 +20,7 @@
             = link_to 'Edit', edit_workout_path(workout), class: "btn btn-default btn-xs not_corner"
             = link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner"
             = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
+    = paginate @templates
 
   .col-md-6
     %h3 Client Workouts
@@ -29,4 +36,4 @@
             = link_to 'Edit', edit_workout_path(workout),class: "btn btn-default btn-xs not_corner"
             = link_to 'Delete', workout, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs not_corner"
             = link_to "Copy", duplicate_workout_path(workout), method: :post, class: "btn btn-warning btn-xs not_corner"
-
+    = paginate @workouts, param_name: 'page_2'
