--- a/app/views/workouts/_fields.html.haml
+++ b/app/views/workouts/_fields.html.haml
@@ -32,4 +32,4 @@
 
 
   %br
-= f.link_to_add 'Add a Set', :exercise_sets, class: "btn btn-success btn-xs"
+= f.link_to_add 'Add a Set', :exercise_sets, class: "btn btn-success btn-sm"
