--- a/app/views/workouts/_form.html.haml
+++ b/app/views/workouts/_form.html.haml
@@ -21,7 +21,7 @@
       = f.label :user_id
       %br/
       = f.select(:user_id, User.all.map {|u| [u.full_name, u.id]},  {include_blank: "Template"})
-  %h3 Add Sets
+  %h3 Sets
   = render 'fields', f: f
 
   .actions
